--- a/package.json
+++ b/package.json
@@ -23,10 +23,14 @@
 		"@typescript-eslint/eslint-plugin": "^6.0.0",
 		"@typescript-eslint/parser": "^6.0.0",
 		"autoprefixer": "^10.4.16",
+		"dotenv": "^16.3.1",
+		"drizzle-kit": "^0.20.7",
 		"eslint": "^8.56.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.35.1",
+		"pg": "^8.11.3",
 		"postcss": "^8.4.32",
+		"postgres": "^3.4.3",
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.1.2",
 		"prettier-plugin-tailwindcss": "^0.5.9",
@@ -34,9 +38,14 @@
 		"svelte-check": "^3.6.0",
 		"tailwindcss": "^3.4.0",
 		"tslib": "^2.4.1",
+		"tsx": "^4.7.0",
 		"typescript": "^5.0.0",
 		"vite": "^5.0.3",
 		"vitest": "^1.0.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@neondatabase/serverless": "^0.6.1",
+		"drizzle-orm": "^0.29.1"
+	}
 }
