--- a/package.json
+++ b/package.json
@@ -45,7 +45,12 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@lucia-auth/adapter-drizzle": "1.0.0-beta.4",
 		"@neondatabase/serverless": "^0.6.1",
-		"drizzle-orm": "^0.29.1"
+		"drizzle-orm": "^0.29.1",
+		"drizzle-zod": "^0.5.1",
+		"lucia": "3.0.0-beta.13",
+		"oslo": "^0.25.1",
+		"zod": "^3.22.4"
 	}
 }
